[project]
  name = "overload_numpy"
  version = "0.0.1"
  description = "Overload NumPy Functions"
  readme = "README.rst"
  requires-python = ">=3.8"
  license = {file = "LICENSE"}
  keywords = ["numpy", "interoperability"]
  authors = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"}
  ]
  maintainers = [
    {name = "Nathaniel Starkman", email = "n.starkman@mail.utoronto.ca"}
  ]
  classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
  ]
  dependencies = [
    "mypy",
    "typing_extensions>=4.2",
    "mypy_extensions>=0.4.3",
  ]

[project.optional-dependencies]
  all = []
  test = [
    "coverage[toml]",
    "numpy>=1.18",
    "pytest",
    "pytest-astropy",
  ]
  docs = [
    "graphviz",
    "IPython",
    "jupyter_client",
    "nbsphinx",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-astropy",
    "sphinxcontrib.bibtex < 2.0.0",
    "tomlkit",
  ]

[project.urls]
  homepage = "https://overload_numpy.readthedocs.io"
  repository = "https://github.com/nstarman/overload_numpy"
  documentation = "https://overload_numpy.readthedocs.io"


[build-system]
  requires = [
    "mypy>=0.971",
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.3.1",
    "wheel",
  ]

  build-backend = 'setuptools.build_meta'

[tool.setuptools]
  package-dir = {"" = "src"}

[tool.setuptools_scm]


[tool.cibuildwheel]
  build-verbosity = 1
  # So these are the environments we target:
  # - Python: CPython 3.8+ only
  # - Architecture (64-bit only): amd64 / x86_64, universal2, and arm64
  # - OS: Linux (no musl), Windows, and macOS
  build = "cp3*-*"
  skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "pp-*"]
  before-build = ["pip install -r .github/mypyc-requirements.txt"]
  # This is the bare minimum needed to run the test suite. Pulling in the full
  # test_requirements.txt would download a bunch of other packages not necessary
  # here and would slow down the testing step a fair bit.
  test-requires = ["pytest>=6.1.1"]
  test-command = 'pytest {project} -k "not incompatible_with_mypyc"'
  # Skip trying to test arm64 builds on Intel Macs. (so cross-compilation doesn't
  # straight up crash)
  test-skip = ["*-macosx_arm64", "*-macosx_universal2:arm64"]

[tool.cibuildwheel.environment]
  BLACK_USE_MYPYC = "1"
  MYPYC_OPT_LEVEL = "3"
  MYPYC_DEBUG_LEVEL = "0"
  # The dependencies required to build wheels with mypyc aren't specified in
  # [build-system].requires so we'll have to manage the build environment ourselves.
  PIP_NO_BUILD_ISOLATION = "no"

[tool.cibuildwheel.linux]
  before-build = [
      "pip install -r .github/mypyc-requirements.txt",
      "yum install -y clang",
  ]
  # Newer images break the builds, not sure why. We'll need to investigate more later.
  manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64:2021-11-20-f410d11"

[tool.cibuildwheel.linux.environment]
  BLACK_USE_MYPYC = "1"
  MYPYC_OPT_LEVEL = "3"
  MYPYC_DEBUG_LEVEL = "0"
  PIP_NO_BUILD_ISOLATION = "no"

[tool.cibuildwheel.windows]
  before-build = ["pip install -r .github/mypyc-requirements.txt"]


[tool.autopep8]
  max_line_length = 120
  in-place = true
  recursive = true


[tool.black]
  line-length = 120
  include = '\.pyi?$'
  exclude = '''
  /(
      \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  '''


[tool.isort]
  profile = "black"
  multi_line_output = 3
  include_trailing_comma = "True"
  force_grid_wrap = 0
  use_parentheses = "True"
  ensure_newline_before_comments = "True"
  sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
  known_localfolder = "overload_numpy"
  known_third_party = ["numpy", "pytest"]
  import_heading_stdlib = "STDLIB"
  import_heading_thirdparty = "THIRD PARTY"
  import_heading_localfolder = "LOCAL"


[tool.mypy]
  disallow_untyped_defs = true
  ignore_missing_imports = true
  no_implicit_optional = true
  warn_return_any = true
  warn_redundant_casts = true
  warn_unused_configs = true
  warn_unreachable = true
  exclude = '''(^|/)tests/'''
  plugins = []

  [[tool.mypy.overrides]]
    module = "*/tests/*"
    ignore_errors = true

  [[tool.mypy.overrides]]
    module = "docs/*"
    ignore_errors = true

  [[tool.mypy.overrides]]
    module = "tests/*"
    ignore_errors = true


[tool.pytest.ini_options]
  testpaths = ["tests", "src/overload_numpy", "docs"]
  astropy_header = "True"
  doctest_plus = "enabled"
  text_file_format = "rst"
  addopts = "--doctest-rst"
  markers = [
    "incompatible_with_mypyc: run when testing mypyc compiled black"
  ]
  filterwarnings = [
    # tomlkit
    "ignore:The config value `project' has type `String', defaults to `str'.",
    "ignore:The config value `htmlhelp_basename' has type `String', defaults to `str'.",
    # distutils
    "ignore:distutils Version classes are deprecated."
  ]


[tool.coverage.run]
  omit = [
    "*/overload_numpy/_astropy_init*",
    "*/overload_numpy/conftest.py",
    "*/overload_numpy/*setup_package*",
    "*/overload_numpy/tests/*",
    "*/overload_numpy/*/tests/*",
    "*/overload_numpy/extern/*",
    "*/overload_numpy/_version*",
  ]

[tool.coverage.report]
  exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "'def main(.*):'",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
  ]
